--- a/public/stylesheets/podcast_show.css
+++ b/public/stylesheets/podcast_show.css
@@ -146,7 +146,6 @@ form#podcast_search {
 
 
 ul#podcast_episodes {
-  table-layout: auto;
   width: 100%;
 }
 
